# dls-1-geo

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: README.md  __init__.py  app.py  config.py  gsd_model.py  inference.py  postprocessing.py  preprocessing.py  requirements.txt
app/models/: __init__.py  unet.py
checkpoints/GSD/: gsd_metrics.json
checkpoints/detection/: det_training_history.json
checkpoints/segmentation/: seg_evaluation_results.json  seg_training_history.json
docs/: dataset_description.md  notes.md  requirements.md
notebooks/: 02_generate_test_ground_truth.ipynb  03_gsd_estimation_training.ipynb  05_detection_training.ipynb  06_test_evaluation.ipynb
src/: __init__.py
src/datasets/: __init__.py  bbox_utils.py  inria_dataset.py  inria_detection_dataset.py  transforms.py
src/losses/: __init__.py  combined_loss.py  dice_loss.py  focal_loss.py  giou_loss.py
src/models/: __init__.py  faster_rcnn.py  gsd.py  unet.py
src/utils/: __init__.py  area.py  checkpoint.py  metrics.py  seed.py  visualization.py
tests/: test_inference.py  test_postprocessing.py  test_preprocessing.py
