[project]
name = "project"
version = "0.1.0"
description = "Building area estimation from aerial imagery using segmentation and detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "gradio>=6.3.0",
    "huggingface-hub>=1.2.3",
    "imagecodecs>=2025.11.11",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "rasterio>=1.3",
    "sam2>=1.1.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tifffile>=2025.12.12",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=5.0.0rc1",
    "ultralytics>=8.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.9",
]
